# D4n1xOS_CYD_ESP32-2432S028_FreeRTOS

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  gpio.h  main.c
